--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,27 +18,41 @@
     text-transform: uppercase;
     transition: 0.3s;
 }
-
-.custom-checkbox .form-check-input:checked ~ .form-check-label::before {
-  border: 1px solid #28a745;
-  background-color: #28a745;
+/* for registration page */
+/* Custom checkbox styles */
+.custom-checkbox .form-check-input {
+  display: none;
 }
-.custom-checkbox .form-check-input:focus ~ .form-check-label::before {
+
+.custom-checkbox .form-check-input:checked + .form-check-label::before {
+  background-color: #28a745; /* Color for checked checkbox */
+  border-color: #28a745; /* Color for checkbox border */
+}
+
+.custom-checkbox .form-check-input:not(:checked) + .form-check-label::before {
+  background-color: #dc3545; /* Color for unchecked checkbox */
+  border-color: #dc3545; /* Color for checkbox border */
+}
+
+.custom-checkbox .form-check-input:focus + .form-check-label::before {
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.25);
 }
-.custom-checkbox .form-check-input:checked:focus ~ .form-check-label::before {
+
+.custom-checkbox .form-check-input:checked:focus + .form-check-label::before {
   box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
 }
-.custom-checkbox .form-check-input:checked::before {
-  content: "\f00c";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-}
-.custom-checkbox .form-check-input:indeterminate::before {
-  content: "\f05d";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-}
+
 .custom-checkbox .form-check-label {
   padding-left: 40px;
 }
+
+/* Additional style for inline checkboxes */
+.custom-checkbox .form-check-inline {
+  margin-right: 10px;
+}
+
+.custom-checkbox .form-check-inline:last-child {
+  margin-right: 0;
+}
+
+/* registration page */
